[package]
name = "crypt_hack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.6.1", features = ["dynamic"] }
heron = { version = "2.3.0", features = ["3d", "collision-from-mesh"] }
leafwing-input-manager = "0.2.0"
iyes_loopless = "0.2.0"
bevy_asset_loader = {version = "0.9.0"}
enum-map = "2.1.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3