[package]
name = "crypt_hack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.7.0", features = ["dynamic"] }
heron = { version = "3.0.0", features = ["3d", "collision-from-mesh"] }

leafwing-input-manager = "0.3.0"
iyes_loopless = "0.5.0"
bevy_asset_loader = {version = "0.10.0"}
# , features = ["render"] 

enum-map = "2.1.0"
rand = { version = "0.8.5" }
ndarray = "0.15.4"
rs-graph = "0.20.1"
delaunay3d = { version = "0.1.0", path = "../delaunay3d"}

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3